# pi-grep-glob

./: .gitignore  AGENTS.md  CHANGELOG.md  NOTICE  README.md  grep-glob-sources.md  grep-glob-tools.md  package-lock.json  package.json  plan.md  review.md
docs/agent-instructions/: architecture.md  build-system.md  testing.md
native/: Cargo.toml  index.d.ts
native/crates/pi-walker/: Cargo.toml
native/crates/pi-walker/src/: cache.rs  lib.rs
native/src/: glob.rs  grep.rs  lib.rs  task.rs
scripts/: copy-native-addon.mjs
src/: index.ts  native.ts  types.ts
src/tools/: glob.ts  grep.ts
src/utils/: format.ts  path-utils.ts
test/: native.test.ts  tools.test.ts
