[package]
name = "pi-grep-glob-native"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["pi-grep-glob contributors"]
repository = "https://github.com/pi-grep-glob/pi-grep-glob"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", features = ["napi8", "async"] }
napi-derive = "3"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
globset = "0.4"
ignore = "0.4"
dashmap = "6"
parking_lot = "0.12"
rayon = "1"
smallvec = "1"
memmap2 = "0.9"
regex = "1"
pi-walker = { path = "crates/pi-walker" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Wdk_Storage_FileSystem"] }

[build-dependencies]
napi-build = "2"
