[package]
name = "pi-walker"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["pi-grep-glob contributors"]

[dependencies]
dashmap = "6"
globset = "0.4"
ignore = "0.4"
parking_lot = "0.12"
rayon = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Wdk_Storage_FileSystem"] }
